fix logo wrap breaking layout (too big)

--- a/css/inner/navbar.less
+++ b/css/inner/navbar.less
@@ -23,7 +23,7 @@
       margin-left: 20px;
       background: url(../../../img/circleci-top-logo.png) no-repeat;
       width: 150px;
-      height: 41px;
+      height: 20px;
     }
 
     // rest of the nav elements
